fix z-index of music control

--- a/client/scss/_base.scss
+++ b/client/scss/_base.scss
@@ -106,7 +106,7 @@ body {
   top: 0;
   right: 0;
   transition: all .2s ease-in-out 0s;
-  z-index: 20;
+  z-index: 200;
   padding: 30px;
 }
 
